# dependency-revamp

./: README.md  action.yml  pyproject.toml
actions_helper/: main.py  outputs.py
actions_helper/commands/: revamp.py
actions_helper/common/: github_helpers.py  templating.py  utils.py
actions_helper/templates/: pr-description.j2
